--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,3 +1,13 @@
+@media (max-width: 968px){
+    .header{
+        padding: 0 20px 0 20px;
+    }
+    .promo{
+        &__wrapper{
+            padding-right: 20px;
+        }
+    }
+}
 @media (max-width: 767px){
     .d-visible{
         display: none;
@@ -17,14 +27,13 @@
         }
     }
     .header{
-        padding: 0 20px 0 20px;
         &__logo{
             width: 240px;
         }
         &__official{
             font-size: 11px;
             span{
-                font-size: 17px;
+                font-size: 16px;
             }
         }
         &__phone{
@@ -32,9 +41,6 @@
         }
     }
     .promo{
-        &__wrapper{
-            padding-right: 20px;
-        }
         &__header{
             font-size: 40px;
             line-height: 40px;
@@ -62,16 +68,215 @@
             line-height: 28px;
         }
         &__icon{
-            margin: 0;
             margin: 0 auto;
             font-size: 15px;
+            width: 280px;
+            img{
+                width: 75px;
+            }
+        }
+        &__title{
+            font-size: 20px;
+            line-height: 33px;
+        }
+        &__descr{
+            font-size: 16px;
+        }
+    }
+}
+@media (max-width: 711px){
+    .button{
+        width: 160px;
+        height: 35px;
+        font-size: 12px;
+        &_main{
+            margin-top: 67px;
+            width: 280px;
+            height: 45px;
+            font-size: 15px;
+        }
+    }
+    .header{
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+        &__logo{
+            width: 250px;
+            margin: 0 25%;
+        }
+        &__official{
+            text-align: center;
+            margin-top: 25px;
+            font-size: 12px;
+            span{
+                font-size: 18px;
+            }
+        }
+        &__phone{
+            font-size: 19px;
+        }
+        &__contacts{
+            margin-top: 15px;
+        }
+    }
+}
+@media (max-width: 575px){
+    .button{
+        width: 150px;
+        height: 30px;
+        font-size: 11px;
+        &_main{
+            width: 260px;
+            height: 40px;
+            font-size: 14px;
+        }
+    }
+    .header{
+        &__logo{
+            width: 250px;
+        }
+        &__official{
+            font-size: 11px;
+            span{
+                font-size: 16px;
+            }
+        }
+        &__phone{
+            font-size: 17px;
+        }
+    }
+    .promo{
+        &__header{
+            font-size: 35px;
+            line-height: 35px;
+        }
+        &__subheader{
+            font-size: 20px;
+            line-height: 20px;
+        }
+        &__icons{
+            width: 390px;
+        }
+        &__icon{
+            font-size: 12px;
+            img{
+                width: 38px;
+            }
+        }
+        &__link{
+            font-size: 13px;
+        }
+    }
+}
+@media (max-width: 476px){
+    .header{
+        &__phone{
+            font-size: 16px;
+        }
+    }
+    .promo{
+        &__wrapper{
+            padding-right: 0;
+            align-items: center;
+        }
+        &__header{
+            font-size: 32px;
+            line-height: 32px;
+        }
+        &__subheader{
+            font-size: 19px;
+            line-height: 19px;
+        }
+        &__icons{
+            width: 370px;
+        }
+        &__icon{
+            font-size: 13px;
+            img{
+                width: 39px;
+            }
+        }
+    }
+}
+@media (max-width: 426px){
+    .button{
+        width: 120px;
+        height: 25px;
+        font-size: 10px;
+        &_main{
+            margin-top: 67px;
+            width: 190px;
+            height: 35px;
+            font-size: 12px;
+        }
+    }
+    .header{
+        &__official{
+            font-size: 10px;
+            span{
+                font-size: 14px;
+            }
+        }
+        &__phone{
+            font-size: 14px;
+        }
+    }
+    .promo{
+        &__header{
+            font-size: 29px;
+            line-height: 29px;
+        }
+        &__subheader{
+            font-size: 17px;
+            line-height: 17px;
+        }
+        &__icons{
+            width: 350px;
+        }
+        &__icon{
+            font-size: 11px;
+            img{
+                width: 34px;
+            }
+        }
+        &__link{
+            margin-top: 15px;
+            font-size: 13px;
+        }
+    }
+}
+@media (max-width: 381px){
+    .promo{
+        &__header{
+            font-size: 26px;
+            line-height: 26px;
+        }
+        &__subheader{
+            font-size: 15px;
+            line-height: 15px;
+        }
+        &__icons{
+            width: 300px;
+        }
+        &__icon{
+            font-size: 13px;
+            img{
+                width: 37px;
+            }
+        }
+        &__link{
+            margin-top: 15px;
+            font-size: 13px;
+        }
+    }
+    .advantage{
+        &__subheader{
+            font-size: 25px;
+            line-height: 25px;
         }
         &__title{
             font-size: 19px;
             line-height: 31px;
-        }
-        &_descr{
-            font-size: 15px;
         }
     }
 }
