add titles.scss, consultation.scss, forms.scss. Addnew section consultation in html and redone all project

--- a/src/sass/blocks/_advantage.scss
+++ b/src/sass/blocks/_advantage.scss
@@ -1,14 +1,7 @@
 .advantage{
     min-height: 473px;
-    padding: 73px 0 0 0;
+    padding: 73px 0 65px 0;
     background-color: #f6f6f6;
-    &__subheader{
-        font-weight: 700;
-        font-size: 30px;
-        line-height: 30px;
-        text-align: center;
-        color: #0D0D0D;
-    }
     &__icons{
         margin-top: 65px;
         width: 100%;
@@ -40,9 +33,9 @@
         font-family: 'MuseoModerno';
         font-weight: 300;
         font-size: 13px;
-        text-decoration-line: underline;
         color: #FF0000;
         &:hover{
+            text-decoration: underline;
             color: #FF0000;
         }
     }
