--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -4,7 +4,7 @@
     border-radius: 5px;
     background-color: $mc;
     border: none;
-    color: #ffffff;
+    color: #FFFFFF;
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
@@ -12,6 +12,11 @@
         margin-top: 67px;
         width: 300px;
         height: 50px;
+        font-size: 16px;
+    }
+    &_submit{
+        width: 100%;
+        height: 55px;
         font-size: 16px;
     }
 }
