--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -49,7 +49,9 @@
         a{
             color: #FFFFFF;
             text-transform: uppercase;
-            text-decoration-line: underline;
+            &:hover{
+                text-decoration: underline;
+            }  
         }
     }
 }
