--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -7,7 +7,10 @@
     margin: 0 auto;
 }
 @import '../blocks/buttons';
+@import '../blocks/titles';
 @import '../blocks/header';
 @import '../blocks/promo';
 @import '../blocks/advantage';
+@import '../blocks/consultation';
+@import '../blocks/forms';
 @import '../blocks/media';
