--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -20,3 +20,71 @@
         font-size: 16px;
     }
 }
+@media (max-width: 767px){
+    .button{
+        width: 150px;
+        height: 30px;
+        font-size: 11px;
+        &_main{
+            width: 280px;
+            height: 45px;
+            font-size: 15px;
+        }
+        &_submit{
+            width: 100%;
+            height: 55px;
+            font-size: 16px;
+        }
+    }
+}
+@media (max-width: 711px){
+    .button{
+        width: 160px;
+        height: 35px;
+        font-size: 12px;
+        &_main{
+            width: 280px;
+            height: 45px;
+            font-size: 15px;
+        }
+        &_submit{
+            width: 100%;
+            height: 55px;
+            font-size: 16px;
+        }
+    }
+}
+@media (max-width: 575px){
+    .button{
+        width: 150px;
+        height: 30px;
+        font-size: 11px;
+        &_main{
+            width: 260px;
+            height: 40px;
+            font-size: 14px;
+        }
+        &_submit{
+            width: 100%;
+            height: 55px;
+            font-size: 16px;
+        }
+    }
+}
+@media (max-width: 426px){
+    .button{
+        width: 124px;
+        height: 25px;
+        font-size: 10px;
+        &_main{
+            width: 210px;
+            height: 35px;
+            font-size: 12px;
+        }
+        &_submit{
+            width: 100%;
+            height: 55px;
+            font-size: 16px;
+        }
+    }
+}
