--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -7,6 +7,21 @@
             padding-right: 20px;
         }
     }
+    .consultation{
+        .container{
+            padding: 0 20px;
+        }
+    }
+}
+@media (max-width: 836px){
+    .consultation{
+        .title{
+            font-size: 31px;
+        }
+        &__descr{
+            font-size: 17px;
+        }
+    }
 }
 @media (max-width: 767px){
     .d-visible{
@@ -68,6 +83,14 @@
             font-size: 16px;
         }
     }
+    .consultation{
+        .title{
+            font-size: 29px;
+        }
+        &__descr{
+            font-size: 16px;
+        }
+    }
 }
 @media (max-width: 711px){
     .header{
@@ -91,6 +114,11 @@
         }
         &__contacts{
             margin-top: 15px;
+        }
+    }
+    .consultation{
+        .title{
+            width: 430px;
         }
     }
 }
@@ -167,6 +195,31 @@
             }
         }
     }
+    .consultation{
+        .title{
+            text-align: center;
+            width: 100%;
+            font-size: 27px;
+        }
+        &__descr{
+            text-align: center;
+            width: 100%;
+        }
+        .feed-form{
+            margin: 0 auto;
+            margin-top: 36px;
+        }
+    }
+}
+@media (max-width: 446px){
+    .consultation{
+        .title{
+            font-size: 25px;
+        }
+        &__descr{
+            font-size: 14px;
+        }
+    }
 }
 @media (max-width: 426px){
     .header{
@@ -195,12 +248,27 @@
             font-size: 13px;
         }
     }
+    .consultation{
+        .title{
+            font-size: 23px;
+        }
+        &__descr{
+            font-size: 14px;
+        }
+    }
 }
 @media (max-width: 381px){
     .header{
         &__official{
             margin: 0 10%;
             margin-top: 15px;
+            font-size: 11px;
+            span{
+                font-size: 16px;
+            }
+        }
+        &__phone{
+            font-size: 17px;
         }
     }
     .promo{
@@ -230,6 +298,29 @@
         &__title{
             font-size: 19px;
             line-height: 31px;
+        }
+    }
+    .consultation{
+        min-height: 640px;
+        padding: 90px 0 92px 0;
+        .title{
+            font-size: 20px;
+        }
+        .feed-form{
+            width: 100%;
+        }
+    }
+}
+@media (max-width: 335px){
+    .consultation{
+        .title{
+            font-size: 18px;
+        }
+        &__descr{
+            font-size: 13px;
+        }
+        .feed-form{
+            width: 100%;
         }
     }
 }
