--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -11,6 +11,7 @@
 @import '../blocks/advantage';
 @import '../blocks/consultation';
 @import '../blocks/forms';
-@import '../blocks/media';
 @import '../blocks/buttons';
 @import '../blocks/titles';
+@import '../blocks/carousel';   
+@import '../blocks/media';
