--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -4,29 +4,28 @@
         position: relative;
         width: 750px;
         margin: 0 auto;
+        .container{
+            img{
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
     }
-    .slick-prev{
+    .slick-prev, .slick-next{
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         left: -66px;
         border: none;
-        background-color: #fff;
+        background-color: transparent;
         img{
-            width: 35px;
-            height: 50px
+            width: 31px;
+            height: 50px;
         }
     }
     .slick-next{
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: -70px;
-        border: none;
-        background-color: #fff;
-        img{
-            width: 35px;
-            height: 50px
-        }
+        left: auto;
+        right: -66px;
     }
 }
