--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,3 +1,51 @@
+@media (max-width: 1013px){
+    .consultation{
+        .container{
+            padding: 0 25px;
+        }
+    }
+}
+@media (max-width: 992px){
+    .carousel{
+        &__inner{
+            .slick-dots{
+                list-style-type: none;
+                button {
+                    font-size: 0;
+                    padding: 0;
+                }
+                li {
+                    button{
+                        width: 35px;
+                        height: 15px;
+                        border-radius: 10px;
+                        border: 2px solid #D0D0D0;
+                        background-color: #fff;
+                    }
+                    &.slick-active > button{
+                        border: 2px solid black;
+                        background-color: #c70101;
+                        transition: 750ms all;
+                    }
+                }
+            }
+        }            
+    }
+    #slick-slide-control00,
+    #slick-slide-control01,
+    #slick-slide-control02{
+        position: absolute;
+    }
+    #slick-slide-control00{
+        left: 302px;
+    }
+    #slick-slide-control01{
+        left: 355px;
+    }
+    #slick-slide-control02{
+        left: 405px;
+    }
+}
 @media (max-width: 968px){
     .header{
         padding: 0 20px 0 20px;
@@ -5,11 +53,6 @@
     .promo{
         &__wrapper{
             padding-right: 20px;
-        }
-    }
-    .consultation{
-        .container{
-            padding: 0 20px;
         }
     }
 }
@@ -196,10 +239,13 @@
         }
     }
     .consultation{
+        .container{
+            padding: 0 20px;
+        }
         .title{
             text-align: center;
             width: 100%;
-            font-size: 27px;
+            font-size: 26.5px;
         }
         &__descr{
             text-align: center;
@@ -250,7 +296,7 @@
     }
     .consultation{
         .title{
-            font-size: 23px;
+            font-size: 22px;
         }
         &__descr{
             font-size: 14px;
@@ -304,7 +350,7 @@
         min-height: 640px;
         padding: 90px 0 92px 0;
         .title{
-            font-size: 20px;
+            font-size: 19px;
         }
         .feed-form{
             width: 100%;
@@ -314,7 +360,7 @@
 @media (max-width: 335px){
     .consultation{
         .title{
-            font-size: 18px;
+            font-size: 17.5px;
         }
         &__descr{
             font-size: 13px;
