The carousel is complete

--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,6 +1,7 @@
 .carousel{
     padding: 81px 0;
     &__inner{
+        border: 2px solid #D0D0D0;
         position: relative;
         width: 750px;
         margin: 0 auto;
