--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -9,41 +9,35 @@
     .carousel{
         &__inner{
             .slick-dots{
+                width: 100%;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
                 list-style-type: none;
+                border-top: 2px solid #D0D0D0;
+                margin: 0 0px -1px 0px;
+                padding: 0;
                 button {
+                    margin: 20px 40px 20px 40px;
                     font-size: 0;
-                    padding: 0;
                 }
                 li {
                     button{
-                        width: 35px;
-                        height: 15px;
-                        border-radius: 10px;
+                        width: 46px;
+                        height: 20px;
+                        border-radius: 20px;
                         border: 2px solid #D0D0D0;
                         background-color: #fff;
+                        cursor: pointer;
                     }
                     &.slick-active > button{
-                        border: 2px solid black;
-                        background-color: #c70101;
+                        border: 2px solid #D0D0D0;
+                        background-color: rgba(199, 1, 1, 0.9);
                         transition: 750ms all;
                     }
                 }
             }
         }            
-    }
-    #slick-slide-control00,
-    #slick-slide-control01,
-    #slick-slide-control02{
-        position: absolute;
-    }
-    #slick-slide-control00{
-        left: 302px;
-    }
-    #slick-slide-control01{
-        left: 355px;
-    }
-    #slick-slide-control02{
-        left: 405px;
     }
 }
 @media (max-width: 968px){
@@ -132,6 +126,14 @@
         }
         &__descr{
             font-size: 16px;
+        }
+    }
+    .carousel{
+        &__inner{
+           width: 98%;
+           img{
+            width: 90vw;
+           }
         }
     }
 }
@@ -266,6 +268,7 @@
             font-size: 14px;
         }
     }
+    
 }
 @media (max-width: 426px){
     .header{
@@ -300,6 +303,15 @@
         }
         &__descr{
             font-size: 14px;
+        }
+    }
+    .carousel{
+        &__inner{
+            .slick-dots{
+                button {
+                    margin: 15px 30px 15px 30px;
+                }
+            }
         }
     }
 }
@@ -367,6 +379,15 @@
         }
         .feed-form{
             width: 100%;
+        }
+    }
+    .carousel{
+        &__inner{
+            .slick-dots{
+                button {
+                    margin: 10px 20px 10px 20px;
+                }
+            }
         }
     }
 }
