--- a/src/css/font.css
+++ b/src/css/font.css
@@ -5,7 +5,7 @@
 		url('../fonts/MuseoSansCyrl-900.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/MuseoSansCyrl-900.woff') format('woff'),
 		url('../fonts/MuseoSansCyrl-900.ttf') format('truetype');
-	font-weight: bold;
+	font-weight: 900;
 	font-style: normal;
 }
 
@@ -16,7 +16,7 @@
 		url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/MuseoSansCyrl-700.woff') format('woff'),
 		url('../fonts/MuseoSansCyrl-700.ttf') format('truetype');
-	font-weight: normal;
+	font-weight: 700;
 	font-style: normal;
 }
 
@@ -27,7 +27,7 @@
         url('../fonts/MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
         url('../fonts/MuseoSansCyrl-500.woff') format('woff'),
         url('../fonts/MuseoSansCyrl-500.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 500;
     font-style: normal;
 }
 
@@ -44,11 +44,26 @@
 
 @font-face {
 	font-family: 'MuseoModerno';
-	src: local('MuseoModerno-300'),
+	src: local('MuseoModerno-Medium'),
+		url('../fonts/MuseoModerno-Medium.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'MuseoModerno';
+	src: local('MuseoModerno-SemiBold'),
+		url('../fonts/MuseoModerno-SemiBold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'MuseoModerno';
+	src: local('MuseoModerno-Light'),
 		url('../fonts/MuseoModerno-Light.ttf') format('truetype');
 	font-weight: 300;
 	font-style: normal;
 }
+
 
 @font-face {
 	font-family: 'Museo Sans Cyrl';
@@ -57,6 +72,6 @@
 		url('../fonts/MuseoSansCyrl-100.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/MuseoSansCyrl-100.woff') format('woff'),
 		url('../fonts/MuseoSansCyrl-100.ttf') format('truetype');
-	font-weight: 300;
+	font-weight: 100;
 	font-style: normal;
 }
