--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,7 +1,7 @@
 .carousel{
     padding: 81px 0;
     &__inner{
-        border: 2px solid #D0D0D0;
+        border: 2px solid #e8e8e8;
         position: relative;
         width: 750px;
         margin: 0 auto;
@@ -28,5 +28,90 @@
     .slick-next{
         left: auto;
         right: -66px;
+    }
+}
+@media (max-width: 992px){
+    .carousel{
+        &__inner{
+            .slick-dots{
+                width: 100%;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                list-style-type: none;
+                border-top: 2px solid #e8e8e8;
+                margin: 0 0px -1px 0px;
+                padding: 0;
+                button {
+                    margin: 20px 40px 20px 40px;
+                    font-size: 0;
+                }
+                li {
+                    button{
+                        width: 46px;
+                        height: 20px;
+                        border-radius: 20px;
+                        border: 2px solid #e8e8e8;
+                        background-color: #fff;
+                        cursor: pointer;
+                    }
+                    &.slick-active > button{
+                        box-shadow: 0 0 8px rgba(199, 1, 1, 0.5);
+                        border: 2px solid rgba(199, 1, 1, 0.9);
+                        background-color: rgba(199, 1, 1, 0.9);
+                        transition: 750ms all;
+                    }
+                }
+            }
+        }            
+    }
+}
+@media (max-width: 840px){
+    .carousel{
+        &__inner{
+            margin-left: 4.55%;
+            width: 90%;
+            height: auto;
+            img{
+                width: 83vw;
+                height: auto;
+            }
+        }
+    }
+}
+@media (max-width: 711px){
+    .carousel{
+        &__inner{
+            .slick-dots{
+                li {
+                    button{
+                        width: 36px;
+                        height: 15px;
+                    }
+                }
+            }  
+        }
+    }
+}
+@media (max-width: 426px){
+    .carousel{
+        &__inner{
+            .slick-dots{
+                button {
+                    margin: 15px 30px 15px 30px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 335px){
+    .carousel{
+        &__inner{
+            .slick-dots{
+                button {
+                    margin: 10px 20px 10px 20px;
+                }
+            }
+        }
     }
 }
