--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -1,6 +1,9 @@
 @import '../base/variables';
 *{
     font-family: 'Museo Sans Cyrl', sans-serif;
+    &::selection{
+        background: $mc;
+    }
 }
 .container{
     max-width: 950px;
@@ -13,5 +16,6 @@
 @import '../blocks/forms';
 @import '../blocks/buttons';
 @import '../blocks/titles';
-@import '../blocks/carousel';   
+@import '../blocks/carousel';
+@import '../blocks/catalog'; 
 @import '../blocks/media';
