--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -2,7 +2,8 @@
 *{
     font-family: 'Museo Sans Cyrl', sans-serif;
     &::selection{
-        background: $mc;
+        background: rgb(199, 1, 1);
+        color: white;
     }
 }
 .container{
