--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -2,8 +2,11 @@
 *{
     font-family: 'Museo Sans Cyrl', sans-serif;
     &::selection{
-        background: rgb(199, 1, 1);
+        background: rgb(210, 3, 3);
         color: white;
+    }
+    img{
+        user-select: none;
     }
 }
 .container{
@@ -18,5 +21,7 @@
 @import '../blocks/buttons';
 @import '../blocks/titles';
 @import '../blocks/carousel';
-@import '../blocks/catalog'; 
+@import '../blocks/catalog';
+@import '../blocks/reviews';
+@import '../blocks/map';
 @import '../blocks/media';
