--- a/src/sass/blocks/_map.scss
+++ b/src/sass/blocks/_map.scss
@@ -30,6 +30,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
             img{
                 margin: 0 15px;
             }
