--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -42,6 +42,11 @@
             height: 45px;
             font-size: 15px;
         }
+        &_mini{
+            width: 135px;
+            height: 44px;
+            font-size: 14px;
+        }
         &_submit{
             width: 100%;
             height: 55px;
@@ -58,6 +63,11 @@
             width: 280px;
             height: 45px;
             font-size: 15px;
+        }
+        &_mini{
+            width: 135px;
+            height: 44px;
+            font-size: 14px;
         }
         &_submit{
             width: 100%;
@@ -76,6 +86,11 @@
             height: 40px;
             font-size: 14px;
         }
+        &_mini{
+            width: 135px;
+            height: 44px;
+            font-size: 14px;
+        }
         &_submit{
             width: 100%;
             height: 55px;
@@ -92,6 +107,11 @@
             width: 220px;
             height: 40px;
             font-size: 13px;
+        }
+        &_mini{
+            width: 135px;
+            height: 44px;
+            font-size: 14px;
         }
         &_submit{
             width: 100%;
