--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -15,22 +15,26 @@
         font-weight: 300;
         font-size: 14px;
         color: #4B4B4B;
-        transition: .08s;
+        transition: .15s;
         cursor: pointer;
         &:nth-child(3){
             margin-bottom: 20px;
         }
         &:focus{
-            outline: 3.5px solid #ffffff;
+            outline: 3.5px solid #E8E8E8;
+            border: .5px solid #E8E8E8;
             cursor: default;
         }
         &::-webkit-outer-spin-button,
         &::-webkit-inner-spin-button{
         -webkit-appearance: none;
         margin: 0;
-        }
-        &[type=number]{
-            -moz-appearance: textfield;
-        }
+    }
+    &[type=number]{
+        -moz-appearance: textfield;
+    }
+}
+    &_mt25{
+        margin-top: 25px;
     }
 }
