--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -34,4 +34,5 @@
 @import '../blocks/catalog';
 @import '../blocks/reviews';
 @import '../blocks/map';
+@import '../blocks/modal';
 @import '../blocks/media';
