Unfinished flying window

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -221,6 +221,17 @@
     }
 }
 @media (max-width: 476px){
+    .modal{
+        height: 75%;
+        width: 65%;
+        padding: 21px 31px 31px 31px;
+        .feed-form{
+            // margin-top: 10px;
+            width: 100%;
+        }
+    }
+}
+@media (max-width: 476px){
     .header{
         &__phone{
             font-size: 16px;
@@ -375,6 +386,15 @@
             font-size: 19px;
         }
         .feed-form{
+            width: 100%;
+        }
+    }
+    .modal{
+        height: 80%;
+        width: 65%;
+        padding: 21px 31px 31px 31px;
+        .feed-form{
+            // margin-top: 10px;
             width: 100%;
         }
     }
