--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -7,4 +7,20 @@
         font-size: 20px;
         color: #FFFFFF;
     }
+    input.error{
+        text-align: left;
+    }
+    label.error{
+        color: white;
+        text-align: center;
+        border: .5px solid $mc;
+        outline: 1.5px solid $mc;
+        transition: .15s;
+        margin-bottom: 15px;
+        &:focus{
+            transition: .05s;
+            outline: 2.5px solid $mc;
+            border: .5px solid $mc;
+        }
+    }
 }
