--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -24,6 +24,7 @@
         color: #ffffff;
         font-size: 18px;
         font-weight: 400;
+        cursor: pointer;
         &:hover{
             color: #ffffff;
             text-decoration: none;
